--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Welcome to DJC0DE's Homepage!
+title: Welcome to DeadJimC0DE's Homepage!
 description: Feel free to bookmark this to keep an eye on my project updates
